edifact-edi/2.1/modules/ROOT/pages/edifact-edi-connector-config-topics.adoc
= EDIFACT EDI - Additional Configuration Information - Mule 4
// Add brief introduction

== Creating Schemas

If your implementation conventions differ from the standard, you can create schemas to describe your messages according to your implementation. Standard versions of the schemas for all defined EDIFACT messages and supported versions are included in the distribution.

== Set Your Schema Locations

You can configure schema locations in the Anypoint Studio XML view.

In Anypoint Studio, switch to the XML view by clicking Configuration XML and modify your EDIFACT EDI configuration to include a list of all the schemas you wish to include by adding an `+<http://edischema[edi:schema]>+` element for each document type:

[source,xml,linenums]
----
<edifact-edi:config name="EDIFACT_EDI__Configuration" identKeys="true" doc:name="EDIFACT EDI: Configuration">
  <edifact-edi:schemas>
    <edifact:schema value="/edifact/d96a/ORDERS.esl"/>
  </edifact-edi:schemas>
</edifact-edi:config>
----

After you create a global element for your EDIFACT EDI, configure any schemas and operations.

=== Configuration Options in XML

All values listed in the Studio configuration can be set directly in XML.

General parameters control both send and receive document handling (all are optional, with default values as shown):

[%header%autowidth.spread]
|===
|XML Value |Studio Option
|schemas=list of values |List of paths for schemas to be used by connector. The paths can be either for a file system or classpath.
|stringSubstitutionChar |Substitution character used to replace invalid characters in string values when using syntax level UNOA or UNOB.
|separatorUsage="USE_DEFAULTS" "USE_SPECIFIED_FOR_WRITES" "USE_SPECIFIED_FOR_ALL" |Usage of specified separator/release characters as defaults for messages.
|dataSeparator="+" |Data element separator character.
|componentSeparator=":" |Component element separator character.
|repetitionSeparator="*" |Repetition separator character.
|segmentTerminator="'" |Segment terminator character.
|releaseCharacter="?" |Release character.
|===

== Self Identification Parameters

Use these parameters to identify your side of the trading partner relationship.

[%header%autowidth.spread]
|===
|XML Value |Studio Option
|interchangeIdSelf |Mule interchange sender/receiver ID (UNB2.1/UNB3.1).
|interchangeIdQualifierSelf |Interchange sender/receiver ID qualifier (UNB2.2/UNB3.2).
|===

== Partner Identification Parameters

These identify your partner.

[%header%autowidth.spread]
|===
|XML Value |Studio Option
|interchangeIdPartner |Partner interchange sender/receiver ID for Mule application (UNB2.1/UNB3.1).
|interchangeIdQualifierPartner |Partner interchange sender/receiver ID qualifier (UNB2.2/UNB3.2).
|===

== Parser Parameters for Error Conditions

These control the parser operation and the types of error conditions that reject receive messages.

[%header%autowidth.spread]
|===
|XML Value |Studio Option
|enforceLengthLimits="true" |Enforce minimum and maximum lengths for receive values.
|enforceValueRepeats="true" |Enforce repetition count limits for receive values.
|enforceReadCharacters="true" |Enforce valid characters for read (only applies when using syntax levels UNOA and UNOB).
|allowUnknownSegments="false" |Allow unknown segments in a message.
|enforceSegmentOrder="true" |Enforce segment order in a message.
|allowUnusedSegments="false" |Allow segments marked as 'Unused' in a message.
|enforceSegmentRepeats="true" |Enforce segment repetition count limits in a message.
|receiveEncodingOverride="false" |Java character encoding to use for receive messages (overrides receive UNB).
|requireUniqueInterchanges="true" |Require unique Interchange Control References (UNB.5)). The default behavior is to record the interchange numbers previously processed and reject any duplicate interchange numbers from the same partner (as determined by the interchange sender and receiver identification). If false, this instead allows processing of the received interchange to continue and leaves it to the application flow to track numbers and handle appropriately.
|requireUniqueMessages="false" |Enforce globally unique Message Reference Numbers (UNH.1) for received messages. By default, message reference numbers only need to be unique with a particular interchange. If true, this instead requires message reference numbers to be unique across all interchanges received from the same partner and application (as determined by the interchange sender and recipient identification).
|daysToStore="30" |Minimum number of days to store interchange, group, and message numbers for checking uniqueness.
|===

== Writer Parameters

These control the types of writer operations.

[%header%autowidth.spread]
|===
|XML Value |Studio Option
|characterEncoding="ASCII_B" |Character encoding used for writing messages (there must be one defined in EDIFACT syntax versions).
|sendSyntaxVersion="VERSION4" |Syntax version for send messages, also used to determine the data structures used for service segments and CONTRL acknowledgment message structures in DataSense metadata for both send and receive.
|lineEnding="NONE" "LF" "CRLF" "CR" |Line ending to add between segments, that defaults to NONE. This allows you to add line endings between segments to improve the readability of the output message text.
|alwaysSendUNA="false" |Always send UNA service segment. With the default setting of false, a UNA is only included in an interchange when the syntax separator characters don't match the defaults for the syntax version and character encoding in use, if set to true, a UNA is always sent.
|enforceWriteCharacters="true" |Enforce valid characters for write (only applies when using syntax levels UNOA and UNOB).
|sendUniqueMessageNumbers="false" |Send unique Message Reference Numbers (UNH.1). By default, message reference numbers are assigned sequentially within each interchange and are reused in different interchange. If true, this instead assigns unique transaction set numbers across all interchanges sent to the same partner (as determined by the interchange sender and recipient identification).
|initialInterchangeReference="1" |The initial Interchange Control Reference used for outgoing messages.
|initialMessageReference="1" |The initial Message Reference Number used for outgoing messages.
|requestAcks="false" |Request acknowledgments for send interchanges using the Acknowledgment Request field (UNB.9).
|testIndicator="" |Test indicator digit to be used on send interchanges (UNB.11). By default, interchanges are not sent as tests.
|useSuppliedValues="false" |Choose your own data values for control-segment identifiers such as UNB and UNZ segments or use supplied values. The default behavior is to always generate control numbers when writing, that allows you to instead use the values you have chosen instead.
|===

== Next Step
////
After you complete configuring the connector, you can try
the xref:edifact-edi-connector-examples.adoc[Examples].
////
== See Also
* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
